// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`$Map 1`] = `
[TypeError: Expected Map<number, object>, got [object Map]
  Expected number, got true]
`;

exports[`$Map 2`] = `
[TypeError: Expected Map<boolean, number>, got [object Map]
  Expected number, got {}]
`;

exports[`$Set 1`] = `
[TypeError: Expected Set<number>, got Set[true,false]
  Expected number, got true]
`;
